# Fre1

./: .gitignore  .qoderignore  1.md  2.md  4.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  bevy_examples_catalog.md  build.rs  repomix.config.json  ui_settings.ron  update_b15.py  update_b16.py  update_b17.py  update_b18.py  update_b19.py  update_b21.py  update_b22.py  update_b23.py  update_b24.py  update_final25.py  update_final26.py  update_final27.py
.claude/agents/: architect.md  code-reviewer.md  content-architect.md  data-architect.md  domain-designer.md  feature-developer.md  presentation-architect.md  refactor-guardian.md  test-guardian.md
.claude/hooks/: engramory_index_guard.py
.claude/memory/: MEMORY.md  adr-067-sprite-picking-architecture.md  battle-hud-data-flow-2026-06-22.md  character-status-panel-widget.md  decision-capability-not-service.md  feedback-agent-delegation.md  feedback-codegraph-first.md  feedback-terse-response.md  picking-architecture-refactor-june-2026.md  project-architecture.md  project-bevy-translations.md  project-constraints.md  project-open-menu-esc-bridge.md  project-picking-refactor-phase-2-3.md  project-planning-docs-fully-archived.md  project-playable-combat-loop.md  project-targeting-mode-impl.md  project-ui-review-2026-06-22.md  reference-bevy-source.md  reference-github.md  skill-panel-widget-implementation.md  unit-selection-domain-added.md  user-role.md
.lingma/agents/: architect.md  code-reviewer.md  domain-designer.md  feature-developer.md  refactor-guardian.md  test-guardian.md
.lingma/rules/: ai_constitution.md  code_style.md  comment_rules.md  review_rules.md
.mimocode/agents/: architect.md  code-reviewer.md  content-architect.md  data-architect.md  domain-designer.md  feature-developer.md  presentation-architect.md  refactor-guardian.md  test-guardian.md
.mimocode/plans/: 1781693055697-mighty-squid.md  1781982145724-swift-river.md
.qoder/agents/: architect.md  (+8 more)
.trae/: .ignore  mcp.json
docs/: 1.md  10.md  11.md  13.md  14.md  5.md  6.md  AI开发宪法.md  AI开发宪法完整版.md  README.md  architecture-doc-gaps-2026-06-21.md  architecture.md  architecture_changelog_v3.md  best_practices.md  coding_rules.md  domain.md  domain_rules.md  equipment_system_plan.md  refactor_bevy_features.md  skill_system.md  test_spec.md  test_spec_json.md  好习惯.md  目录.md
scripts/: ui-arch-check.sh
src/: action_menu.rs  ai.rs  assets.rs  camera.rs  combat.rs  combat_event.rs  combat_log.rs  gas_integration_test.rs  input.rs  lib.rs  macros.rs  main.rs  map.rs  pathfinding.rs  status.rs  tile_info.rs  turn.rs  ui.rs  unit.rs  vfx.rs
src_待迁移/: input.rs  lib.rs
tests/: buff_damage.rs  buff_lifecycle.rs  combat_flow.rs  combat_pipeline.rs  edge_cases.rs  feature.rs  golden.rs  integration.rs  legacy_edge.rs  legacy_turn.rs  scenario.rs  scene_smoke.rs  skill_system.rs  turn_flow.rs
tests_待迁移/: feature.rs  legacy_buff.rs  legacy_combat.rs
tools/: check-architecture-budget.sh  check-cross-layer-macros.sh  check-error-invariants.sh  check-events-consistency.sh  check-identity-invariants.sh  check-logging-invariants.sh  localization-check.sh  localization-coverage.sh
(+3283 files in other folders)
