[package]
name = "tactical_rpg"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["2d"] }
bevy-inspector-egui = "0.36"
serde = { version = "1.0", features = ["derive"] }
ron = "0.12.1"

[features]
default = []
dev = ["bevy/file_watcher"]

[dev-dependencies]
proptest = "1.5"
insta = { version = "1.41", features = ["yaml"] }
