[package]
name = "fre"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19", features = [
    "2d", # 元 Feature，已隐式包含: bevy_state/bevy_ui/bevy_text/bevy_sprite/bevy_gizmos/bevy_log/bevy_picking/sprite_picking/ui_picking/bevy_input_focus/reflect_auto_register/png/multi_threaded

    # 序列化
    "serialize",  # serde 支持
    "bevy_scene", # DynamicScene / World 快照

    # 开发工具
    "bevy_dev_tools", # 官方开发工具集
    # "bevy_debug_stepping", # System 单步调试
    "bevy_remote",    # 运行时远程控制台
    "track_location", # 错误追踪 System 来源
    "file_watcher",   # 资产热重载

    # Reflect 增强
    "reflect_documentation", # 反射文档注释（编辑器基础）

    # 相机
    "bevy_camera_controller", # 官方相机控制器
] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.12.1"
thiserror = "2"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }
paste = "1"
regex = "1"
fre-macros = { path = "macros/fre-macros" }

# 确定性 PRNG（详见 ADR-041）
rand = "0.10"
rand_chacha = "0.10"
enum-map = "2"
fluent = "0.17"
fluent-bundle = "0.16"
fluent-syntax = "0.12"
intl-memoizer = "0.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
notify = { version = "8" }

[features]
default = []
dev = ["bevy/file_watcher", "bevy/bevy_dev_tools", "bevy/bevy_debug_stepping"]
fake-locale = []

[dev-dependencies]
bevy = { version = "0.19", features = ["2d"] }
proptest = "1.5"
insta = { version = "1.48.0", features = ["yaml", "redactions"] }
